fixed nav on mobile

--- a/Web/src/components/style.css
+++ b/Web/src/components/style.css
@@ -3,7 +3,6 @@
     color: white;
     margin-bottom: 1.5rem;
     width: 100%;
-    border-radius: 5px;
     -webkit-box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1);
     box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1);
 }
