--- a/Web/src/routes/submission/style.css
+++ b/Web/src/routes/submission/style.css
@@ -1,3 +1,12 @@
 .is-half {
 	width:50%;
 }
+.is-no-border-radius {
+	border-radius:0px;
+}
+
+.input-holster{
+	padding: 10px 20px;
+	background-color:#f5f5f5;
+}
+.bottom-bar{}
